<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/full_name_hint_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellerFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:singleLine="true"
                tools:text="@tools:sample/full_names" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_no_hint_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellerPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="12dp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                tools:text="@tools:sample/us_phones" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_hint_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place"
                android:drawablePadding="12dp"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="42dp"
            android:hint="@string/city_hint_text"
            app:hintEnabled="true">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/sellerCity"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                tools:text="@tools:sample/cities" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:hint="@string/state_hint_text"
            app:hintEnabled="true">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/sellerState"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="42dp"
            android:hint="@string/pincode_hint_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellerPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                tools:text="@tools:sample/us_zipcodes" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SellerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>